--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				</footer>
 			</div>
 		</div>
-		<script type="module" src="src/js/swiper-bundle.min.js"></script>
+		<!-- <script type="module" src="src/js/swiper-bundle.min.js"></script> -->
 		<script type="module" src="src/js/main.js"></script>
 	</body>
 </html>
